# lyra-bot

./: .env.example  .env.prod  .gitignore  README.md  deug.py  plugin_data  pyproject.toml  requirements.txt  tool.py  versions.yaml
DEV/: m.py
DEV/maimai-b50-image-generator/: b50.py
assets/: versions.yaml
dev_plugins/div_maib/libraries/: maimai_best_50.py
dev_plugins/reincamate/: __init__.py
frpc/: frpc.toml
libs/: HelpContent.py
maibot/: INFO.md
maibot/plugins/: maimaidx.py  public.py
plugins/: beta.py  ciallo.py  daily_partner.py  fortune.py  help.py  plugin_help.py
plugins/bakamai/: __init__.py  config.py  manager.py  models.py  replies.py
plugins/bakamai/migrations/: 8c9127af8c4d_.py
plugins/daily_partner/: __init__.py  matcher.py  models.py  plugin_help.py  services.py
plugins/daily_partner/migrations/: fe62315a285e_.py
plugins/fortune/: __init__.py  core.py  default.py  default_fortune_desc.json  desc.py  history.py  lib.py  msg.py  utils.py
plugins/kadou_query/: __init__.py  cmd_query.py  cmd_update.py  plugin_help.py  radar.py  utils.py
plugins/maib/: __init__.py  adx_download.py  b50_calc.py  bot_registry.py  bot_services.py  constants.py  db_utils.py  diving_fish.py  fetch.py  image_gen.py  img.py  jrwm.py  json_manager.py  mai2_music.py  maibuild.py  matcher.py  models.py  napcat_stream.py  network.py  note_count.py  plugin_help.py  ra_calculator.py  report.py  services.py  utils.py  what_card.py
plugins/maib/assets/: dan_course.yaml  genres.yaml  plate_excludes.yaml  versions.yaml
plugins/maib/image_gen/: __init__.py  __main__.py  builder.py  config.py  models.py  resources.py  utils.py
plugins/maib/migrations/: 0093ec4169e8_.py  0f2eb886799b_database_20260321.py  (+8 more)
plugins/nonebot_plugin_i18n/: README.md  __init__.py
plugins/rebirth/: __init__.py  default.py  history.py  map_build.py
plugins/reincamate/: cn_humans.json  reinc_cn.py  reincamate.py
plugins/what_food/: __init__.py  ai_service.py  default.py  init.py  json_update.py  menu.py  messages.py  models.py  plugin_help.py  services.py  utils.py
tools/: adx_downloader.py  build_maidata.py  extract_maidata.py  run_server.py  run_source.py  versions.yaml
tools/maidata/: __init__.py  checker.py  downloader.py  fetch.py  md5_check.py  note_count.py  save.py
(+14 files in other folders)
