[project]
name = "LyraBot"
version = "0.0.1"
description = "A QQ Bot"
readme = "README.md"
requires-python = ">=3.9, <4.0"

[tool.nonebot]
adapters = [
    { name = "OneBot V11", module_name = "nonebot.adapters.onebot.v11" }
]
plugins = [
    "nonebot_plugin_localstore",
    "nonebot_plugin_datastore"
]
plugin_dirs = [
    "plugins"
]
